# grand-line

./: .gitignore  CLAUDE.md  Cargo.toml  Clippy.toml  Makefile  README.md  TODO.md  dprint.json  lib.rs  rustfmt.toml
auth/: Cargo.toml  lib.rs
auth/context/: config.rs  context.rs  directive.rs  mod.rs
auth/models/: auth_otp.rs  login_session.rs
auth/resolvers/: forgot.rs  forgot_resolve.rs  login.rs  login_session_current.rs  login_session_delete.rs  login_session_search.rs  logout.rs  otp_resolve.rs  register.rs  register_resolve.rs
auth/schema/: schema.rs
auth/utils/: mod.rs  password.rs  rand.rs
auth_utils/: Cargo.toml  err.rs  lib.rs  rand.rs
authenticate/: Cargo.toml  config.rs  context.rs  context_async.rs  email.rs  err.rs  fn_forgot.rs  fn_forgot_resolve.rs  fn_login.rs  fn_login_session_current.rs  fn_login_session_delete.rs  fn_login_session_search.rs  fn_logout.rs  fn_otp_resolve.rs  fn_register.rs  fn_register_resolve.rs  forgot.rs  lib.rs  login.rs  login_session.rs  login_session_current.rs  mod.rs  model_auth_otp.rs  model_auth_ticket.rs  model_login_session.rs  model_user.rs  password.rs  qs.rs  rand.rs  register.rs  schema.rs  user.rs
authenticate/context/: context.rs
authenticate/model/: auth_ticket.rs  login_session.rs  mod.rs  user.rs
authenticate/schema/: email.rs  forgot.rs  login.rs  login_session_current.rs  mod.rs  register.rs  schema.rs
authenticate/utils/: err.rs  mod.rs  password.rs  qs.rs  secret.rs
authorize/: mod.rs
axum/: Cargo.toml  lib.rs
axum/context/: context.rs
axum/export/: context.rs  err.rs  mod.rs
axum/utils/: mod.rs
context/: context.rs  context_x.rs  db.rs  db_x.rs  extension.rs  loader.rs  mod.rs
core/: Cargo.toml  lib.rs  mod.rs
core/db/: active_model.rs  active_model_async.rs  column.rs  context.rs  context_async.rs  data_loader.rs  entity.rs  entity_async.rs  err.rs  filter.rs  gql_model.rs  into_select.rs  look_ahead.rs  mod.rs  model.rs  model_async.rs  order_by.rs  pagination.rs  query_filter.rs  select.rs  select_async.rs
core/graphql/: cache_context.rs  cache_context_async.rs  config.rs  config_context.rs  context.rs  context_async.rs  context_data.rs  data.rs  data_context.rs  data_loader.rs  data_loader_context_async.rs  err.rs  extension.rs  extension_context.rs  grand_line_config.rs  grand_line_context.rs  mod.rs  state.rs  tx_context.rs  tx_context_async.rs
core/utils/: err.rs  err_graphql_output.rs  err_impl.rs  json.rs  mod.rs  ulid.rs
db/: active_model.rs  active_model_async.rs  chain_select.rs  column.rs  data_loader.rs  entity.rs  entity_async.rs  err.rs  filter.rs  gql_model.rs  into_condition.rs  into_select.rs  look_ahead.rs  mod.rs  model.rs  model_async.rs  order_by.rs  pagination.rs  query_filter.rs  select.rs  select_async.rs
examples/simple-todo/: Cargo.toml
examples/simple-todo/src/: main.rs
examples/simple_todo/: Cargo.toml  build.rs
examples/simple_todo/src/: main.rs
extra/: context.rs  crud_helpers.rs  mod.rs  pagination.rs
gql/: context.rs  context_async.rs  data_loader.rs  extension.rs  grand_line_context.rs  (+2 more)
grand-line-proc-macros/: Cargo.toml  lib.rs
http/: Cargo.toml  context.rs  err.rs  lib.rs  mod.rs
http_axum/: Cargo.toml  context.rs
macro_proc/: Cargo.toml  lib.rs
macro_proc/crud/: check_crud_io.rs  count.rs  create.rs  crud_attr.rs  delete.rs  detail.rs  gen_detail.rs  gen_search.rs  gen_update.rs  mod.rs  search.rs  update.rs
macro_proc/model/: filter.rs  filter_and_or_not.rs  gen_model.rs  gen_relation.rs  gen_resolver.rs  gql.rs  mod.rs  model.rs  model_attr.rs  model_derive_attr.rs  order_by.rs  relation.rs  relation_attr.rs  resolver.rs  resolver_attr.rs  virtual_gen.rs  virtual_resolver_fn.rs
macro_proc/resolver_ty/: mod.rs  mutation.rs  query.rs  resolver_fn.rs  resolver_ty.rs  resolver_ty_attr.rs  resolver_ty_item.rs
macro_proc/utils/: attr_default_flags.rs  attr_extract.rs  attr_parse.rs  attr_ty.rs  debug_macro.rs  enunn.rs  err.rs  expr_struct.rs  gen_db_action.rs  gen_db_soft_delete_by_id.rs  gen_db_soft_delete_many.rs  gen_enum.rs  gen_input.rs  gql_enum.rs  gql_input.rs  include_deleted.rs  mod.rs  naming.rs  order_by.rs  struct_gen.rs  unwrap_option.rs
macro_proc_proc/: Cargo.toml  lib.rs
macro_proc_proc/mods/: field_names.rs  partial_eq_string.rs
macro_utils/: Cargo.toml  am_value.rs  attr.rs  attr_debug.rs  attr_parse.rs  err.rs  field.rs  lib.rs  string.rs
macro_utils/attr/: attr.rs  attr_parse.rs
macro_utils/macros/: am_value.rs  field.rs  mod.rs  string.rs  tmp_db.rs  use_common.rs
macro_utils/mods/: attr_debug.rs  mod.rs
macro_utils/utils/: mod.rs  ts2.rs
macro_utils_proc/: Cargo.toml  lib.rs
macro_utils_proc/macros/: attr_default_flag.rs  attr_unwrap.rs  field_names.rs  mod.rs
macro_utils_proc/mods/: attr_default_flag.rs  attr_unwrap.rs  field_names.rs  partial_eq_string.rs
proc_macros/: Cargo.toml  lib.rs
proc_macros/crud/: check_crud_io.rs  crud_attr.rs  gen_count.rs  gen_create.rs  gen_delete.rs  gen_detail.rs  gen_search.rs  gen_update.rs  mod.rs
proc_macros/input/: gen_input.rs  mod.rs
proc_macros/model/: filter.rs  filter_and_or_not.rs  gen_derive.rs  gen_model.rs  gen_relation.rs  gen_resolver.rs  gen_virtual.rs  gql.rs  insert_builtin.rs  mod.rs  model_attr.rs  push_filter.rs  push_filter_and_or_not.rs  push_gql.rs  push_order_by.rs  relation.rs  relation_attr.rs  relation_ty.rs  utils.rs  virtual_gen.rs  virtual_ty.rs
proc_macros/resolver/: gen_mutation.rs  gen_query.rs  gen_resolver.rs  gen_resolver_parse.rs  gen_resolver_ty.rs  mod.rs
proc_macros/resolver_ty/: gen_mutation.rs  gen_query.rs  mod.rs  resolver_fn.rs  resolver_ty.rs  resolver_ty_attr.rs  resolver_ty_item.rs
proc_macros/utils/: attr.rs  attr_default_flags.rs  attr_parse.rs  debug_macro.rs  debug_panic.rs  debug_prefix.rs  gen_active_create.rs  gen_active_update.rs  gen_enum.rs  gen_input.rs  gen_order_by.rs  gen_struct.rs  macro_attr.rs  mod.rs  naming.rs  parse_rest.rs  prepend_struct.rs  unwrap_option.rs  zzz.rs
proc_proc_macros/: Cargo.toml  lib.rs
proc_proc_macros/utils/: attr_unwrap.rs  mod.rs
(+229 files in other folders)
