[workspace]
members = [".", "examples/*", "packages/*"]
resolver = "2"

[package]
name = "grand-line"
version = "0.0.0"
edition = "2024"

[lib]
name = "grand_line"
path = "lib.rs"

[features]
default = ["postgres", "default_without_db"]
default_without_db = ["axum"]
# db
sqlite = ["_core/sqlite"]
mysql = ["_core/mysql"]
postgres = ["_core/postgres"]
# debug macro flags
debug_macro_cli = ["_core/debug_macro_cli"]
debug_macro_file = ["_core/debug_macro_file"]
# model flags
no_created_at = ["_core/no_created_at"]
no_updated_at = ["_core/no_updated_at"]
no_deleted_at = ["_core/no_deleted_at"]
no_by_id = ["_core/no_by_id"]
# resolver flags
resolver_inputs = ["_core/resolver_inputs"]
resolver_output = ["_core/resolver_output"]
no_tx = ["_core/no_tx"]
no_ctx = ["_core/no_ctx"]
no_include_deleted = ["_core/no_include_deleted"]
no_permanent_delete = ["_core/no_permanent_delete"]
# testing
test_utils = ["pretty_assertions", "serde", "thiserror"]
# packages
tracing = ["_tracing", "_core/tracing"]
http = ["_http"]
axum = ["http", "_http/axum"]

[dependencies]
_core = { path = "./packages/core", default-features = false, features = [] }
_http = { path = "./packages/http", optional = true, default-features = false, features = [] }
_tracing = { path = "./packages/tracing", optional = true, default-features = false, features = [] }
_utils = { path = "./packages/macro_utils", default-features = false, features = [] }
pretty_assertions = { version = "^1.4", optional = true, default-features = false, features = ["std"] }
serde = { version = "^1.0", optional = true, default-features = false, features = ["derive", "std"] }
thiserror = { version = "^2.0", optional = true, default-features = false, features = [] }
