[workspace]
members = [".", "examples/*", "packages/*"]
resolver = "2"

[package]
name = "grand-line"
version = "0.0.0"
edition = "2024"

[lib]
name = "grand_line"
path = "lib.rs"

[features]
default = ["postgres", "default_without_db"]
default_without_db = ["axum", "auth", "authz"]
# db
sqlite = ["_core/sqlite"]
mysql = ["_core/mysql"]
postgres = ["_core/postgres", "_auth/postgres"]
# debug macro flags
debug_macro_cli = ["_core/debug_macro_cli"]
debug_macro_file = ["_core/debug_macro_file"]
# model flags
no_created_at = ["_core/no_created_at"]
no_updated_at = ["_core/no_updated_at"]
no_deleted_at = ["_core/no_deleted_at"]
no_by_id = ["_core/no_by_id"]
# resolver flags
resolver_inputs = ["_core/resolver_inputs"]
resolver_output = ["_core/resolver_output"]
no_tx = ["_core/no_tx"]
no_ctx = ["_core/no_ctx"]
no_include_deleted = ["_core/no_include_deleted"]
no_permanent_delete = ["_core/no_permanent_delete"]
# testing
test_utils = ["pretty_assertions", "thiserror"]
# packages
tracing = ["_tracing", "_core/tracing"]
http = ["_http"]
axum = ["http", "_http/axum"]
auth = ["_auth", "_core/auth", "rand_utils"]
authz = ["auth", "_authz", "_core/authz"]
rand_utils = ["_rand_utils"]

[dependencies]
_auth = { path = "./packages/auth", optional = true, default-features = false }
_authz = { path = "./packages/authz", optional = true, default-features = false }
_core = { path = "./packages/core", default-features = false }
_http = { path = "./packages/http", optional = true, default-features = false }
_rand_utils = { path = "./packages/rand_utils", optional = true, default-features = false }
_tracing = { path = "./packages/tracing", optional = true, default-features = false }
_utils = { path = "./packages/macro_utils", default-features = false }
async-graphql = { version = "^7.2", default-features = false }
pretty_assertions = { version = "^1.4", optional = true, default-features = false, features = ["std"] }
serde = { version = "^1.0", default-features = false, features = ["derive"] }
thiserror = { version = "^2.0", optional = true, default-features = false }

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }
blanket_clippy_restriction_lints = "allow"

allow_attributes = "allow"
allow_attributes_without_reason = "allow"
cargo_common_metadata = "allow"
missing_docs_in_private_items = "allow"
multiple_crate_versions = "allow"
negative_feature_names = "allow"
pub_use = "allow"
