[package]
name = "_authenticate"
version = "0.0.0"
edition = "2024"

[lib]
name = "_authenticate"
path = "lib.rs"

[dependencies]
_axum = { path = "../axum", default-features = false, features = [] }
_core = { path = "../core", default-features = false, features = [] }
argon2 = { version = "0.5.3", default-features = false, features = ["alloc", "password-hash"] }
base64 = { version = "0.22.1", default-features = false, features = [] }
rand = { version = "0.9.2", default-features = false, features = ["thread_rng"] }
rand_core = { version = "0.9.3", default-features = false, features = [] }
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
serde_qs = { version = "0.15.0", default-features = false, features = [] }
thiserror = { version = "2.0.17", default-features = false, features = [] }
validator = { version = "0.20.0", default-features = false, features = [] }
