[package]
name = "grand-line-proc-macros"
version = "0.0.0"
edition = "2021"

[lib]
name = "grand_line_proc_macros"
path = "lib.rs"
proc-macro = true

[dependencies]
grand-line-macros = { path = "../grand-line-macros" }
heck = "0.5.0"
proc-macro2 = "1.0.81"
quote = "1.0.36"
syn = { version = "2.0.60", features = ["full"] }
