[package]
name = "_http"
version = "0.0.0"
edition = "2024"

[lib]
name = "_http"
path = "lib.rs"

[features]
axum = ["_http_axum"]

[dependencies]
_core = { path = "../core", default-features = false, features = [] }
_http_axum = { path = "../http_axum", optional = true, default-features = false, features = [] }
cookie = { version = "0.18.1", default-features = false, features = [] }
thiserror = { version = "2.0.17", default-features = false, features = [] }
