[package]
name = "macro_proc"
version = "0.0.0"
edition = "2024"

[lib]
name = "macro_proc"
path = "lib.rs"
proc-macro = true

[features]
postgres = []
# debug macro flags
debug_macro = []
debug_macro_cli = ["debug_macro", "colored", "prettyplease"]
debug_macro_file = ["debug_macro"]
# model flags
no_created_at = []
no_updated_at = []
no_deleted_at = []
no_by_id = []
# resolver flags
resolver_inputs = []
resolver_output = []
no_tx = []
no_ctx = []
no_include_deleted = []
no_permanent_delete = []
# limit flags
limit_x2 = []
limit_x5 = []
limit_x10 = []

[dependencies]
colored = { version = "3.0.0", optional = true }
heck = "0.5.0"
macro_proc_proc = { path = "../macro_proc_proc" }
macro_utils = { path = "../macro_utils" }
maplit = "1.0.2"
prettyplease = { version = "0.2.37", optional = true }
proc-macro2 = "1.0.101"
quote = "1.0.41"
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
strum = "0.27.2"
strum_macros = "0.27.2"
syn = { version = "2.0.106", features = ["full"] }
