[package]
name = "_proc"
version = "0.0.0"
edition = "2024"

[lib]
name = "_proc"
path = "lib.rs"
proc-macro = true

[features]
postgres = []
# debug macro flags
debug_macro = []
debug_macro_cli = ["debug_macro", "colored", "prettyplease"]
debug_macro_file = ["debug_macro"]
# model flags
no_created_at = []
no_updated_at = []
no_deleted_at = []
no_by_id = []
# resolver flags
resolver_inputs = []
resolver_output = []
no_tx = []
no_ctx = []
no_include_deleted = []
no_permanent_delete = []
# auth flags
auth = []

[dependencies]
_utils = { path = "../macro_utils", default-features = false, features = [] }
_utils_proc = { path = "../macro_utils_proc", default-features = false, features = [] }
colored = { version = "3.0.0", optional = true, default-features = false, features = [] }
prettyplease = { version = "0.2.37", optional = true, default-features = false, features = [] }
