[package]
name = "macro_proc_proc"
version = "0.0.0"
edition = "2024"

[lib]
name = "macro_proc_proc"
path = "lib.rs"
proc-macro = true

[dependencies]
heck = "0.5.0"
macro_utils = { path = "../macro_utils" }
maplit = "1.0.2"
proc-macro2 = "1.0.95"
quote = "1.0.40"
serde = { version = "1.0.219", default-features = false, features = ["derive", "std"] }
strum = "0.27.2"
strum_macros = "0.27.2"
syn = { version = "2.0.104", features = ["full"] }
