[package]
name = "macro_utils"
version = "0.0.0"
edition = "2024"

[lib]
name = "macro_utils"
path = "lib.rs"

[dependencies]
heck = { version = "0.5.0", default-features = false, features = [] }
maplit = { version = "1.0.2", default-features = false, features = [] }
proc-macro2 = { version = "1.0.101", default-features = false, features = [] }
quote = { version = "1.0.41", default-features = false, features = [] }
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
strum = { version = "0.27.2", default-features = false, features = [] }
strum_macros = { version = "0.27.2", default-features = false, features = [] }
syn = { version = "2.0.106", default-features = false, features = ["default"] }
