[package]
name = "_macro_utils"
version = "0.0.0"
edition = "2024"

[lib]
name = "_macro_utils"
path = "lib.rs"

[dependencies]
heck = { version = "0.5.0", default-features = false, features = [] }
maplit = { version = "1.0.2", default-features = false, features = [] }
proc-macro2 = { version = "1.0.103", default-features = false, features = [] }
quote = { version = "1.0.41", default-features = false, features = [] }
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
syn = { version = "2.0.108", default-features = false, features = ["derive", "parsing", "printing", "clone-impls", "proc-macro"] }
