[package]
name = "macro_utils_proc"
version = "0.0.0"
edition = "2024"

[lib]
name = "macro_utils_proc"
path = "lib.rs"
proc-macro = true

[dependencies]
heck = "0.5.0"
macro_utils = { path = "../macro_utils" }
maplit = "1.0.2"
proc-macro2 = "1.0.101"
quote = "1.0.41"
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
strum = "0.27.2"
strum_macros = "0.27.2"
syn = { version = "2.0.106", features = ["full"] }
