[package]
name = "grand-line-proc-macros"
version = "0.0.0"
edition = "2024"

[lib]
name = "grand_line_proc_macros"
path = "lib.rs"
proc-macro = true

[dependencies]
grand-line-macros = { path = "../macros" }
heck = "0.5.0"
proc-macro2 = "1.0.95"
quote = "1.0.40"
serde = { version = "1.0.219", features = ["derive", "std"] }
serde_json = "1.0.140"
syn = { version = "2.0.104", features = ["full"] }
