[package]
name = "grand-line-proc-macros"
version = "0.0.0"
edition = "2024"

[lib]
name = "grand_line_proc_macros"
path = "lib.rs"
proc-macro = true

[dependencies]
grand-line-macros = { path = "../macros" }
heck = { version = "0.5.0" }
proc-macro2 = { version = "1.0.95" }
quote = { version = "1.0.40" }
serde = { version = "1.0.219", features = ["derive", "std"] }
serde_json = { version = "1.0.141" }
syn = { version = "2.0.104", features = ["full"] }
