[package]
name = "grand-line-proc-macros"
version = "0.0.0"
edition = "2024"

[lib]
name = "grand_line_proc_macros"
path = "lib.rs"
proc-macro = true

[features]
postgres = []
# debug macro flags
debug_macro = []
debug_macro_cli = ["debug_macro", "colored", "prettyplease"]
debug_macro_file = ["debug_macro"]
# model flags
no_created_at = []
no_updated_at = []
no_deleted_at = []
no_by_id = []
# resolver flags
resolver_inputs = []
resolver_output = []
no_tx = []
no_ctx = []
# limit flags
limit_x2 = []
limit_x5 = []
limit_x10 = []

[dependencies]
colored = { version = "3.0.0", optional = true }
field_names = "0.2.0"
grand-line-macros = { path = "../macros" }
grand-line-proc-proc-macros = { path = "../proc_proc_macros" }
heck = "0.5.0"
maplit = "1.0.2"
prettyplease = { version = "0.2.36", optional = true }
proc-macro2 = "1.0.95"
quote = "1.0.40"
strum = "0.27.2"
strum_macros = "0.27.2"
syn = { version = "2.0.104", features = ["full"] }
