[package]
name = "grand-line-proc-proc-macros"
version = "0.0.0"
edition = "2024"

[lib]
name = "grand_line_proc_proc_macros"
path = "lib.rs"
proc-macro = true

[dependencies]
grand-line-macros = { path = "../macros" }
heck = { version = "0.5.0" }
maplit = { version = "1.0.2" }
proc-macro2 = { version = "1.0.95" }
quote = { version = "1.0.40" }
syn = { version = "2.0.104", features = ["full"] }
