[package]
name = "simple-todo"
version = "0.0.0"
edition = "2021"

[dependencies]
async-graphql = { version = "7.0.3", features = ["chrono"] }
async-graphql-axum = "7.0.3"
axum = "0.7.5"
grand-line = { path = "../.." }
sea-orm = { version = "0.12.15", default-features = false, features = ["macros", "with-chrono", "with-json", "runtime-tokio-rustls", "sqlx-sqlite"] }
serde = { version = "1.0.199", features = ["derive", "std"] }
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = ["macros", "chrono", "json", "runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.37.0", features = ["full"] }
